# ep

./: .env.example  .gitignore  EXAM_IMPORT_GUIDE.md  FIREBASE_SETUP.md  IMPLEMENTATION_SUMMARY.md  TEACHER_SETUP.md  db.sqlite3  exam_import_template-20251103-235034.xlsx  generate_exam_template.py  generate_exam_template_simple.py  manage.py  package.json  pyproject.toml  tailwind.config.js
api/: models.py  serializers.py  views.py
exam/: add_exam.py  models.py  serializers.py  urls.py  views.py
exam/migrations/: 0001_initial.py  0002_question_type_mcq_topic_question_type_msq_topic_and_more.py
examPortal/: asgi.py  firebase_auth.py  settings.py  urls.py  wsgi.py
static/css/: landing.css  login.css  style.css
static/js/: chart.js  landing.js  login.js  signup.js
static/src/: input.css
staticfiles/css/: login.css
staticfiles/js/: login.js
student/: models.py  serializers.py  urls.py  views.py
student/migrations/: 0001_initial.py  0002_studentprofile_is_premium.py  0003_examattempt_answers_json_examattempt_percentage_and_more.py
teacher/: admin.py  models.py  urls.py  views.py
teacher/migrations/: 0001_initial.py
templates/: course_exams.html  courses.html  dashboard.html  exam.html  exam_results.html  instructions.html  landing.html  login.html  my_exams.html  results.html  settings.html  signup.html
templates/teacher/: create_exam.html  dashboard.html  login.html  manage_exams.html  upload_paper.html
